# breachly

./: .editorconfig  .gitignore  .wakatime-project  Cargo.toml  README.md  kanbn.json  package.json
.github/: pull_request_template.md
docs/: authors.md  design-philosophy.md  faq.md  index.md  roadmap.md
docs/dev/: index.md  task-board.md
docs/dev/pm/: task-board.md
docs/dev/tasks/: changelog-generation.md  contribution-and-further-documentation.md  documentation-generation-and-automation.md  funding-provider.md  initial-documentation.md  initial-readme-file.md  pre-release-project-task-management-system.md  project-logo.md
docs/pm/: index.md  task-board.md
docs/pm/tasks/: build-and-deploy-documentation-site.md  changelog-generation.md  documentation-generation-and-automation.md  git-hub-templates-and-config.md  project-logo.md
docs/project/: _index.md  index.md  roadmap.md  task-board.md
docs/project/tasks/: automatic-formatting-packages-and-configs.md  contribution-and-further-documentation.md  funding-provider.md  initial-documentation.md  pre-release-project-task-management-system.md  project-logo.md
