[package]
name = "breachops-task"
version = "0.1.0"
authors = ["skyeBreach <skyebreach@proton.me>"]
description = "A personal project managment command-line tool"
categories = ["command-line-utilities"]
keywords = ["cli"]
readme = "README.md"
homepage = "https://github.com/skyeBreach/breachops-task"
repository = "https://github.com/skyeBreach/breachops-task"
license = "MIT"
edition = "2024"

[dependencies]
bincode = "1.3.3"
serde = "1.0.218"
serde_json = "1.0.139"
thiserror = "2.0.11"
tracing = "0.1.41"
